# recommender

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md
benches/: database.rs
src/: baseline.rs  dataset.rs  lib.rs  parser.rs  reader.rs
src/dataset/: disk.rs  drive.rs  memory.rs  mod.rs  reader.rs
src/parser/: mod.rs  text.rs
tests/: baseline.rs
tests/dataset/: mod.rs
tests/parser/: mod.rs
tests/reader/: mod.rs
